fix 1 partnumber tendo vários ids + fix z-index modal - elementos com border radius e rounded

--- a/Client/PCP/pcp.css
+++ b/Client/PCP/pcp.css
@@ -276,8 +276,9 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgba(0,0,0,0.4);
+    z-index: 3;
 }
 
 .modal-content {
@@ -335,7 +336,7 @@ formulário
     color: #fff;
     margin-bottom: 1rem;
     width: 40%;
-    z-index: 9999;
+    z-index: 2;
 }
 
 .grouping-form label {
